WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309197
[Site Isolation] ProcessSwap.NumberOfPrewarmedProcesses is failing
https://bugs.webkit.org/show_bug.cgi?id=309197
Summary
[Site Isolation] ProcessSwap.NumberOfPrewarmedProcesses is failing
rupin
Reported
2026-03-04 15:37:52 PST
[Site Isolation] ProcessSwap.NumberOfPrewarmedProcesses is failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-04 15:37:58 PST
<
rdar://problem/171756969
>
rupin
Comment 2
2026-03-04 16:04:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59930
EWS
Comment 3
2026-03-05 09:41:27 PST
Committed
308714@main
(9ad368767d98): <
https://commits.webkit.org/308714@main
> Reviewed commits have been landed. Closing PR #59930 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug